--- a/block-BRaaao/code/gizmo/src/style.css
+++ b/block-BRaaao/code/gizmo/src/style.css
@@ -129,9 +129,34 @@ table {
 }
 
 header {
-  padding: 0 2rem;
+  padding: 2rem;
   display: flex;
   justify-content: space-between;
+}
+header a {
+  text-decoration: none;
+  padding: 1.3em 3em;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+header a:hover {
+  background-color: #2ee59d;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+header a:active {
+  transform: translateY(-1px);
 }
 header ul {
   display: flex;
@@ -144,14 +169,13 @@ header > h3 {
   font-size: 1.5rem;
 }
 .hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('hero-img.jpeg');
+  background-image: url('../public/hero-img.jpeg');
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  padding: 5rem 2rem;
+  padding: 7rem 2rem;
 }
 .hero h1,
 p {
@@ -170,6 +194,7 @@ p {
   margin: 1rem auto;
   border: 1px solid red;
   border-radius: 5px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .articles ul {
   display: flex;
@@ -195,13 +220,35 @@ p {
   padding: 1rem;
   border-top-right-radius: 5px;
 }
+
 .articles a {
   text-decoration: none;
-  background-color: bisque;
-  padding: 0.5rem 1rem;
-  color: black;
-  border-radius: 40px;
+  padding: 1em 2em;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
 }
+
+.articles a:hover {
+  background-color: #2ee59d;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+.articles a:active {
+  transform: translateY(-1px);
+}
+
 footer {
   background-color: cadetblue;
   padding: 1rem 0;
