--- a/block-BRaaae/code/style.css
+++ b/block-BRaaae/code/style.css
@@ -109,6 +109,12 @@ body {
   line-height: 1;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: rgb(238, 174, 202);
+  background: radial-gradient(
+    circle,
+    rgba(238, 174, 202, 1) 0%,
+    rgba(148, 187, 233, 1) 100%
+  );
 }
 ol,
 ul {
@@ -137,14 +143,33 @@ h1 {
 }
 .container {
   padding: 2.5rem;
-  border: 1px solid red;
+  border: 1px solid gray;
   width: 600px;
   margin: 2rem auto;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background: rgb(34, 193, 195);
+  background: linear-gradient(
+    0deg,
+    rgba(34, 193, 195, 1) 0%,
+    rgba(253, 187, 45, 1) 100%
+  );
+}
+input {
+  border-radius: 4px;
+  border-style: none;
+}
+hr {
+  border: 1px dashed black;
+  width: 100%;
 }
 .container .movie-name {
   width: 100%;
   padding: 0.5rem;
+}
+label {
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 span {
   color: red;
@@ -155,4 +180,7 @@ span {
 }
 button {
   margin-left: 2rem;
+}
+li {
+  margin-top: 1.2rem;
 }
